finished log in

--- a/src/components/login-modal/login-modal.html
+++ b/src/components/login-modal/login-modal.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Log In</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="sendCancel()">
-        <ion-icon name="person"></ion-icon>
+    <ion-buttons start>
+      <button ion-button (click)="sendCancel()">
+        Cancel
       </button>
     </ion-buttons>
+    <ion-title>Log In</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -20,21 +20,15 @@
         <ion-label floating>Password</ion-label>
         <ion-input formControlName="password" type="password"></ion-input>
       </ion-item>
-      <ion-item row>
-        <button col col-6 ion-button type="submit" [disabled]="!form.valid">
+      <ion-item>
+        <button ion-button block type="submit" [disabled]="!form.valid">
           Log In
         </button>
-        <button type="button" col col-6 ion-button (click)="signup()" [disabled]="!form.valid">
-          Sign Up
-        </button>
+        <!--<button type="button" col col-6 ion-button (click)="signup()" [disabled]="!form.valid">-->
+          <!--Sign Up-->
+        <!--</button>-->
       </ion-item>
     </form>
-    <button ion-button (click)="logOut()">
-      Log Out
-    </button>
-    <button ion-button (click)="checkLoggedIn()">
-      Check
-    </button>
   </ion-list>
 
 </ion-content>
