--- a/src/components/sign-up-modal/sign-up-modal.html
+++ b/src/components/sign-up-modal/sign-up-modal.html
@@ -13,6 +13,14 @@
   <ion-list>
     <form [formGroup]="form" (ngSubmit)="signup()">
       <ion-item>
+        <ion-label floating>Name</ion-label>
+        <ion-input formControlName="name" type="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>Bio</ion-label>
+        <ion-textarea formControlName="bio" type="text"></ion-textarea>
+      </ion-item>
+      <ion-item>
         <ion-label floating>Email</ion-label>
         <ion-input formControlName="email" type="text"></ion-input>
       </ion-item>
