--- a/src/components/sign-up-modal/sign-up-modal.html
+++ b/src/components/sign-up-modal/sign-up-modal.html
@@ -33,7 +33,7 @@
         <ion-input formControlName="password" type="password"></ion-input>
       </ion-item>
       <ion-item>
-        <button type="submit" ion-button [disabled]="!form.valid">
+        <button type="submit" block ion-button [disabled]="!form.valid">
         Sign Up
         </button>
       </ion-item>
