--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,18 +1,35 @@
 page-about {
   #card-stack {
-    width: 90%;
-    height: 200px;
-    background: #047915;
-    border: 10px solid #4cb338;
-    margin: 100px auto 0;
+    width: 100%;
+    height: 100%;
+    background: #ddd;
+    margin: 0;
     position: relative;
   }
 
   #card-stack ion-card {
     border-radius: 5px;
     position: absolute;
-    text-align: center;
     top: 3%;
-    height: 90%;
+    height: 60%;
+  }
+
+  p>span {
+    border: solid 1px #ddd;
+    margin: 5px;
+    padding: 2px;
+    border-radius: 3px;
+    line-height: 2;
+  }
+
+  ion-card-content#bio, ion-card-content#skills {
+    height: 30%;
+  }
+
+  ion-row.row {
+    position: absolute;
+    bottom: 48px;
+    width: 100%;
+    text-align: center;
   }
 }
