--- a/src/components/profile-modal/profile-modal.scss
+++ b/src/components/profile-modal/profile-modal.scss
@@ -1,13 +1,24 @@
 profile-modal {
 
   p>span {
-    border: solid 1px #ddd;
+    border: solid 1px rgba($primary,0.6);
     margin: 5px;
     padding: 2px;
     border-radius: 3px;
+    line-height: 2;
   }
 
   .card.card-ios{
     margin-top: 150px;
+  }
+
+  .card.card-ios, .searchbar-ios {
+    background-color: lighten($dark, 5%);
+    color: #ddd;
+  }
+
+  .item.item-block.item-ios {
+    background-color: lighten($dark, 2%);
+    color: #ddd;
   }
 }
