--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -2,7 +2,6 @@ page-about {
   #card-stack {
     width: 100%;
     height: 100%;
-    background: #ddd;
     margin: 0;
     position: relative;
   }
@@ -15,7 +14,7 @@ page-about {
   }
 
   p>span {
-    border: solid 1px #ddd;
+    border: solid 1px rgba($primary,0.6);
     margin: 5px;
     padding: 2px;
     border-radius: 3px;
