--- a/src/components/sign-up-modal/sign-up-modal.html
+++ b/src/components/sign-up-modal/sign-up-modal.html
@@ -13,9 +13,9 @@
   <ion-list>
     <form [formGroup]="form" (ngSubmit)="signup()">
       <ion-item>
-        <ion-thumbnail item-start>
-          <img *ngIf="!imageUrl" src="assets/icon/favicon.ico">
-          <img *ngIf="imageUrl" [src]="imageUrl">
+        <ion-icon *ngIf="!imageUrl" name="person" item-left></ion-icon>
+        <ion-thumbnail item-start *ngIf="imageUrl">
+          <img [src]="imageUrl">
         </ion-thumbnail>
         <button ion-button type="button" (click)="changeImage()">Upload Profile Image</button>
       </ion-item>
