fixed android UI

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -2,4 +2,8 @@ page-home {
   textarea.text-input.text-input-ios {
     height: 100px;
   }
+  .button-md {
+    text-transform: none;
+    font-weight: 400;
+  }
 }
